# flysight

./: .$databases_schema.drawio.bkp  .env  .env-example  .gitignore  Dockerfile  Makefile  README.md  app.py  databases_schema.drawio  docker-compose.yaml  env.yaml  main.py  pyproject.toml  test.py  trash.md
.ipynb_checkpoints/: flysight_data-checkpoint.ipynb
api/: Dockerfile  requirements.txt
api/app/: dependencies.py  main.py
app/: Dockerfile  angular.json  app.py  package-lock.json  package.json  requirements.txt
app/assets/: styles.css
app/src/: index.html  styles.css  styles.scss
assets/: index.css  styles.css
data/: 06-01-10.CSV  12-06-28.CSV  first_test.csv  sample.csv  swoops.json
data/converted/: D06-22-2022T1145J1.csv  D06-22-2022T1717J2.csv  D06-23-2022T1516J3.csv  D06-23-2022T1730J4.csv  D06-23-2022T1850J5.csv  D06-23-2022T1939J6.csv  J1-D06-22-2022T1145.csv  J10-D07-20-2022T1305.csv  J2-D06-22-2022T1717.csv  J5-D06-23-2022T1850.csv  J6-D06-23-2022T1939.csv  J7-D07-20-2022T1100.csv
data/exit/: J1.csv
data/landing/: J1.csv  J10.csv  J2.csv  J3.csv  J4.csv  J5.csv  J6.csv  J8.csv  J9.csv
dataset/: dataset.py  helpers.py
env/: .env-example  env.yaml  requirements.txt
jump/: __init__.py  exit.py  helpers.py  jump.py  landing.py
notebook/: Dockerfile  first_test.csv  flysight_data.ipynb  helpers.py  requirements.txt  sg3k_dataset.ipynb  sg3k_pro.ipynb
notes/: .$databases_schema.drawio.dtmp  databases_schema.drawio
resources/: packages.md
scraper/: get_dropzone_elevation.py
static/: style.css
v1/: app.py  styles.css
(+283 files in other folders)
